--- a/TicTacToe/src/views/SinglePlayer/SinglePlayer.fxml
+++ b/TicTacToe/src/views/SinglePlayer/SinglePlayer.fxml
@@ -21,10 +21,17 @@
                   <Image url="@../Images/testsvg.png" />
                </image>
             </ImageView>
-            <Button fx:id="restartbtn" layoutX="942.0" layoutY="677.0" mnemonicParsing="false" onAction="#restart" prefHeight="70.0" prefWidth="255.0" style="-fx-background-color: #80E4C9;" text="Restart">
+            <Button fx:id="restartbtn" layoutX="839.0" layoutY="635.0" mnemonicParsing="false" onAction="#restart" prefHeight="89.0" prefWidth="337.0" style="-fx-background-color: Tranparent;">
                <font>
                   <Font size="24.0" />
-               </font></Button>
+               </font>
+               <graphic>
+                  <ImageView fitHeight="121.0" fitWidth="244.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../Images/ReB.png" />
+                     </image>
+                  </ImageView>
+               </graphic></Button>
             <BorderPane layoutX="878.0" layoutY="149.0" prefHeight="412.0" prefWidth="314.0">
                <top>
                   <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="25.0" prefWidth="326.0" style="-fx-background-color: transparent;" text="Bot" textAlignment="CENTER" textFill="WHITE" BorderPane.alignment="CENTER">
@@ -51,7 +58,7 @@
                <font>
                   <Font size="24.0" />
                </font></Button>
-            <GridPane fx:id="grid" alignment="CENTER_RIGHT" layoutX="376.0" layoutY="194.0" prefHeight="412.0" prefWidth="463.0" vgap="20.0">
+            <GridPane fx:id="grid" alignment="CENTER_RIGHT" layoutX="376.0" layoutY="194.0" prefHeight="434.0" prefWidth="505.0" vgap="20.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -135,7 +142,7 @@
                   </ImageView>
                </bottom>
             </BorderPane>
-            <Button layoutX="50.0" layoutY="667.0" mnemonicParsing="false" onAction="#back2MainRoom" style="-fx-background-color: transparent;">
+            <Button layoutX="50.0" layoutY="649.0" mnemonicParsing="false" onAction="#back2MainRoom" style="-fx-background-color: transparent;">
                <graphic>
                   <ImageView fitHeight="90.0" fitWidth="257.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -144,7 +151,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Label fx:id="BoardLabel" alignment="CENTER" layoutX="427.0" layoutY="91.0" prefHeight="70.0" prefWidth="359.0" style="-fx-background-color: transparent; -fx-text-fill: linear-gradient(to right,#2556B7, #E4214C);" text="Label">
+            <Label fx:id="BoardLabel" alignment="CENTER" layoutX="449.0" layoutY="91.0" prefHeight="70.0" prefWidth="359.0" style="-fx-background-color: transparent; -fx-text-fill: linear-gradient(to right,#2556B7, #E4214C);" text="Label">
                <font>
                   <Font size="48.0" />
                </font>
